--- a/styles/Block.module.css
+++ b/styles/Block.module.css
@@ -1,3 +1,7 @@
 .container {
-  /*background-color: aquamarine;*/
+  width: 18rem;
+  border-radius: 20px;
+  border-width: 2px;
+  border-color: #4d80ce;
+  margin-bottom: 20px;
 }
